gccida/g3/nonzero_bits
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonzero_bits/src/combine.c:8417:40: error: must use 'enum' tag to refer to type 'machine_mode'
unsigned __int64  nonzero_bits( rtx x, machine_mode mode) 
                                       ^
                                       enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonzero_bits/src/combine.c:8419:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // r10d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonzero_bits/src/combine.c:8423:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonzero_bits/src/combine.c:8478:21: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v5 = *( ( _DWORD *)&mode_class_0 + ( unsigned __int8)v3); 
                    ^~~~~~~~~~~~
                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonzero_bits/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonzero_bits/src/combine.c:8481:10: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| ( *( &mode_class_0 + ( int)mode) & 0xFFFFFFFB) == 2 
         ^~~~~~~~~~~~
         mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonzero_bits/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonzero_bits/src/combine.c:8481:37: error: invalid operands to binary expression ('const enum mode_class [59]' and 'unsigned int')
|| ( *( &mode_class_0 + ( int)mode) & 0xFFFFFFFB) == 2 
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonzero_bits/src/combine.c:8482:19: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| *( ( _DWORD *)&mode_class_0 + ( int)mode) == 8 ) 
                  ^~~~~~~~~~~~
                  mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonzero_bits/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonzero_bits/src/combine.c:8500:21: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v5 = *( ( _DWORD *)&mode_class_0 + ( int)mode); 
                    ^~~~~~~~~~~~
                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonzero_bits/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonzero_bits/src/combine.c:8550:43: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( _DWORD)v33 == v7 || *( ( _DWORD *)&mode_class_0 + v33) == 1 && v5 == 1 ) 
                                          ^~~~~~~~~~~~
                                          mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonzero_bits/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonzero_bits/src/combine.c:8589:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v24.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonzero_bits/src/combine.c:8698:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v19 = ( __int64)x[1]; 
                ^~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonzero_bits/src/combine.c:8775:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v39 = ( __int64)x[1]; 
                ^~~~
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/nonzero_bits/src/obj/combine.o] Error 1
